@@ -1,6 +1,10 @@
 
 4.1.2 - ie refresh in progress
 
+* added clear button to MP3 tab to clear that tabs settings
+
+* ogg's get their id3 tags written
+
 * new option in misc "pad N to NN" eg:
   Artist - 1 - track.ogg
   to
